src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__FaxEmailBackup__c</fullName>
        <description>holds backup of email values so that mass emails can be used to send mass faxes</description>
        <inlineHelpText>Works with Campaign buttons for sending mass faxes via email</inlineHelpText>
        <label>Fax Email Backup</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ZPAPER__FaxEmailValue__c</fullName>
        <formula>if( Fax == &quot;&quot; || HasOptedOutOfFax, Email , substitute(substitute(substitute(substitute(Fax,&quot;-&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;) + &quot;.&quot; + CASESAFEID($Organization.Id) + &quot;.&quot; + CASESAFEID(Id) + &quot;@mfb.zpaper.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax Email Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__FaxEmail__c</fullName>
        <description>holds a copy of the FaxEmailValue formula so that email UIs show it</description>
        <inlineHelpText>set using workflow when fax changes</inlineHelpText>
        <label>Fax Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ZPAPER__MobileToken__c</fullName>
        <description>tooken to use to send zPaper:Mobile push notifications.
iPad app can accessed http://localhost:8080/getDeviceData</description>
        <inlineHelpText>Learn more at http://www.zpaper.com/zpaper-services-mobile and 
get the free app at http://itunes.apple.com/us/app/mydocbin/id402287208?mt=8</inlineHelpText>
        <label>Mobile Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxAgain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used to trigger workflows.</description>
        <label>Send Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxType__c</fullName>
        <description>This field can be used to trigger workflows.</description>
        <label>Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__latestFax__c</fullName>
        <description>This field can be used to trigger workflows.</description>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used to trigger workflows.</description>
        <inlineHelpText>This field can be used to trigger workflows.</inlineHelpText>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__outboundFaxTemplate__c</fullName>
        <description>This field can be used to trigger workflows.</description>
        <label>Outbound Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__producedId__c</fullName>
        <label>producedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__receivedId__c</fullName>
        <label>receivedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxAt__c</fullName>
        <description>This field can be used to trigger workflows.</description>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxStatus__c</fullName>
        <description>This field can be used to trigger workflows.</description>
        <label>Sent Document Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxTo__c</fullName>
        <description>This field can be used to trigger workflows.</description>
        <label>Sent Document To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field can be used to trigger workflows.</description>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>